# pipex

./: .dir-locals.el  .gitignore  .gitmodules  CMakeLists.txt
docs/: notes.org
include/: pipex.h
src/: pipex.c
